base.core/src/main/java/eapli/base/questionnairemanagement/validation/eapli/base/questionnairemanagement/validation/LabeledExprParser.java
// Generated from /Users/joaomarques/Desktop/LAPR4/base.core/src/main/java/eapli/base/questionnairemanagement/validation/LabeledExpr.g4 by ANTLR 4.10.1
package eapli.base.questionnairemanagement.validation;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LabeledExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, FREETEXT=31, 
		NUMERIC=32, SINGLECHOICE=33, SINGLECHOICE_WITH_INPUT=34, MULTIPLECHOICE=35, 
		MULTIPLECHOICE_WITH_INPUT=36, SORTING_OPTIONS=37, SCALING_OPTIONS=38, 
		MANDATORY=39, OPTIONAL=40, CONDITION_DEPENDENT=41, DESCRIPTION=42, SIGNALS=43, 
		LOWERCASE=44, CAPSCASE=45, NUMBERS=46, NEWLINE=47, WS=48, ALPHANUMERIC=49;
	public static final int
		RULE_prog = 0, RULE_start = 1, RULE_start1 = 2, RULE_id = 3, RULE_title = 4, 
		RULE_welcomeMessage = 5, RULE_finalMessage = 6, RULE_section = 7, RULE_start2 = 8, 
		RULE_start3 = 9, RULE_start4 = 10, RULE_start5 = 11, RULE_sID = 12, RULE_sTitle = 13, 
		RULE_sDescription = 14, RULE_sObligatoriness = 15, RULE_sCondition = 16, 
		RULE_sRepeatability = 17, RULE_question = 18, RULE_start6 = 19, RULE_start7 = 20, 
		RULE_qId = 21, RULE_qText = 22, RULE_instruction = 23, RULE_qType = 24, 
		RULE_qObligatoriness = 25, RULE_qCondition = 26, RULE_extraInfo = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "start", "start1", "id", "title", "welcomeMessage", "finalMessage", 
			"section", "start2", "start3", "start4", "start5", "sID", "sTitle", "sDescription", 
			"sObligatoriness", "sCondition", "sRepeatability", "question", "start6", 
			"start7", "qId", "qText", "instruction", "qType", "qObligatoriness", 
			"qCondition", "extraInfo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ID: '", "'Title: '", "'TITLE: '", "'Welcome Message: '", "'WelcomeMessage: '", 
			"'Final Message: '", "'FinalMessage: '", "'Section ID: '", "'SectionID: '", 
			"'Section Title: '", "'SectionTitle: '", "'Section Description: '", "'SectionDescription: '", 
			"'Section Obligatoriness: '", "'SectionObligatoriness: '", "'Condition Dependent: '", 
			"'ConditionDependent: '", "'Section Repeatability: '", "'SectionRepeatibility: '", 
			"'Question ID: '", "'QuestionID: '", "'Question Text: '", "'QuestionText: '", 
			"'Instruction: '", "'Type: '", "'TYPE: '", "'Question Obligatoriness: '", 
			"'QuestionObligatoriness: '", "'Extra Info: '", "'ExtraInfo: '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "FREETEXT", "NUMERIC", "SINGLECHOICE", 
			"SINGLECHOICE_WITH_INPUT", "MULTIPLECHOICE", "MULTIPLECHOICE_WITH_INPUT", 
			"SORTING_OPTIONS", "SCALING_OPTIONS", "MANDATORY", "OPTIONAL", "CONDITION_DEPENDENT", 
			"DESCRIPTION", "SIGNALS", "LOWERCASE", "CAPSCASE", "NUMBERS", "NEWLINE", 
			"WS", "ALPHANUMERIC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LabeledExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LabeledExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public Start1Context start1() {
			return getRuleContext(Start1Context.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				start();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				start1();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	 
		public StartContext() { }
		public void copyFrom(StartContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Questionnarie1Context extends StartContext {
		public IdContext a;
		public TitleContext b;
		public WelcomeMessageContext c;
		public SectionContext d;
		public FinalMessageContext e;
		public List<TerminalNode> NEWLINE() { return getTokens(LabeledExprParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LabeledExprParser.NEWLINE, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public WelcomeMessageContext welcomeMessage() {
			return getRuleContext(WelcomeMessageContext.class,0);
		}
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public FinalMessageContext finalMessage() {
			return getRuleContext(FinalMessageContext.class,0);
		}
		public Questionnarie1Context(StartContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterQuestionnarie1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitQuestionnarie1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitQuestionnarie1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		try {
			_localctx = new Questionnarie1Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			((Questionnarie1Context)_localctx).a = id();
			setState(61);
			match(NEWLINE);
			setState(62);
			((Questionnarie1Context)_localctx).b = title();
			setState(63);
			match(NEWLINE);
			setState(64);
			((Questionnarie1Context)_localctx).c = welcomeMessage();
			setState(65);
			match(NEWLINE);
			setState(66);
			((Questionnarie1Context)_localctx).d = section();
			setState(67);
			match(NEWLINE);
			setState(68);
			((Questionnarie1Context)_localctx).e = finalMessage();
			setState(69);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start1Context extends ParserRuleContext {
		public Start1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start1; }
	 
		public Start1Context() { }
		public void copyFrom(Start1Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Questionnarie2Context extends Start1Context {
		public IdContext a;
		public TitleContext b;
		public SectionContext d;
		public FinalMessageContext e;
		public List<TerminalNode> NEWLINE() { return getTokens(LabeledExprParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LabeledExprParser.NEWLINE, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public FinalMessageContext finalMessage() {
			return getRuleContext(FinalMessageContext.class,0);
		}
		public Questionnarie2Context(Start1Context ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterQuestionnarie2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitQuestionnarie2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitQuestionnarie2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start1Context start1() throws RecognitionException {
		Start1Context _localctx = new Start1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_start1);
		try {
			_localctx = new Questionnarie2Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			((Questionnarie2Context)_localctx).a = id();
			setState(72);
			match(NEWLINE);
			setState(73);
			((Questionnarie2Context)_localctx).b = title();
			setState(74);
			match(NEWLINE);
			setState(75);
			((Questionnarie2Context)_localctx).d = section();
			setState(76);
			match(NEWLINE);
			setState(77);
			((Questionnarie2Context)_localctx).e = finalMessage();
			setState(78);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public List<TerminalNode> ALPHANUMERIC() { return getTokens(LabeledExprParser.ALPHANUMERIC); }
		public TerminalNode ALPHANUMERIC(int i) {
			return getToken(LabeledExprParser.ALPHANUMERIC, i);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__0);
			setState(82); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(81);
				match(ALPHANUMERIC);
				}
				}
				setState(84); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ALPHANUMERIC );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public List<TerminalNode> DESCRIPTION() { return getTokens(LabeledExprParser.DESCRIPTION); }
		public TerminalNode DESCRIPTION(int i) {
			return getToken(LabeledExprParser.DESCRIPTION, i);
		}
		public List<TerminalNode> WS() { return getTokens(LabeledExprParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(LabeledExprParser.WS, i);
		}
		public List<TerminalNode> SIGNALS() { return getTokens(LabeledExprParser.SIGNALS); }
		public TerminalNode SIGNALS(int i) {
			return getToken(LabeledExprParser.SIGNALS, i);
		}
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_title);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !(_la==T__1 || _la==T__2) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(87);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DESCRIPTION) | (1L << SIGNALS) | (1L << WS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DESCRIPTION) | (1L << SIGNALS) | (1L << WS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WelcomeMessageContext extends ParserRuleContext {
		public List<TerminalNode> DESCRIPTION() { return getTokens(LabeledExprParser.DESCRIPTION); }
		public TerminalNode DESCRIPTION(int i) {
			return getToken(LabeledExprParser.DESCRIPTION, i);
		}
		public List<TerminalNode> WS() { return getTokens(LabeledExprParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(LabeledExprParser.WS, i);
		}
		public List<TerminalNode> SIGNALS() { return getTokens(LabeledExprParser.SIGNALS); }
		public TerminalNode SIGNALS(int i) {
			return getToken(LabeledExprParser.SIGNALS, i);
		}
		public WelcomeMessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_welcomeMessage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterWelcomeMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitWelcomeMessage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitWelcomeMessage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WelcomeMessageContext welcomeMessage() throws RecognitionException {
		WelcomeMessageContext _localctx = new WelcomeMessageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_welcomeMessage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !(_la==T__3 || _la==T__4) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(94); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DESCRIPTION) | (1L << SIGNALS) | (1L << WS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DESCRIPTION) | (1L << SIGNALS) | (1L << WS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinalMessageContext extends ParserRuleContext {
		public List<TerminalNode> DESCRIPTION() { return getTokens(LabeledExprParser.DESCRIPTION); }
		public TerminalNode DESCRIPTION(int i) {
			return getToken(LabeledExprParser.DESCRIPTION, i);
		}
		public List<TerminalNode> WS() { return getTokens(LabeledExprParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(LabeledExprParser.WS, i);
		}
		public List<TerminalNode> SIGNALS() { return getTokens(LabeledExprParser.SIGNALS); }
		public TerminalNode SIGNALS(int i) {
			return getToken(LabeledExprParser.SIGNALS, i);
		}
		public FinalMessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_finalMessage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterFinalMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitFinalMessage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitFinalMessage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FinalMessageContext finalMessage() throws RecognitionException {
		FinalMessageContext _localctx = new FinalMessageContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_finalMessage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__6) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DESCRIPTION) | (1L << SIGNALS) | (1L << WS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DESCRIPTION) | (1L << SIGNALS) | (1L << WS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public List<Start2Context> start2() {
			return getRuleContexts(Start2Context.class);
		}
		public Start2Context start2(int i) {
			return getRuleContext(Start2Context.class,i);
		}
		public List<Start3Context> start3() {
			return getRuleContexts(Start3Context.class);
		}
		public Start3Context start3(int i) {
			return getRuleContext(Start3Context.class,i);
		}
		public List<Start4Context> start4() {
			return getRuleContexts(Start4Context.class);
		}
		public Start4Context start4(int i) {
			return getRuleContext(Start4Context.class,i);
		}
		public List<Start5Context> start5() {
			return getRuleContexts(Start5Context.class);
		}
		public Start5Context start5(int i) {
			return getRuleContext(Start5Context.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_section);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(108);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						setState(104);
						start2();
						}
						break;
					case 2:
						{
						setState(105);
						start3();
						}
						break;
					case 3:
						{
						setState(106);
						start4();
						}
						break;
					case 4:
						{
						setState(107);
						start5();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(110); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
